# wifi-qr-code

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.github/workflows/: main.yml
examples/: qr_code_gen.rs
src/: lib.rs
