[package]
name = "wifi-qr-code"
version = "0.1.0"
authors = ["Amy Keibler <wanderingelf14@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "Library for generating WiFi QR codes"
repository = "https://github.com/amy-keibler/wifi-qr-code"
documentation = "https://docs.rs/wifi-qr-code"
readme = "README.md"
keywords = ["WiFi", "QR", "qrcode"]
categories = ["encoding"]

[badges]
is-it-maintained-issue-resolution = { repository = "https://github.com/amy-keibler/wifi-qr-code" }
is-it-maintained-open-issues = { repository = "https://github.com/amy-keibler/wifi-qr-code" }
maintenance = { status = "actively-developed" }

[dependencies]
qrcode-generator = "1.0.5"

[dev-dependencies]
structopt = "0.3.5"
rpassword = "4.0.3"
